CSV output added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ set(PADRINGSRC
     ${PROJECT_SOURCE_DIR}/src/svgwriter.cpp
     ${PROJECT_SOURCE_DIR}/src/defwriter.cpp
     ${PROJECT_SOURCE_DIR}/src/verilogwriter.cpp
+    ${PROJECT_SOURCE_DIR}/src/csvwriter.cpp
     ${PROJECT_SOURCE_DIR}/src/prlefreader.cpp
     ${PROJECT_SOURCE_DIR}/src/configreader.cpp
     ${PROJECT_SOURCE_DIR}/src/lef/lefreader.cpp
